--- a/Controls/WinFormControls.csproj
+++ b/Controls/WinFormControls.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>WinFormControls</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,14 +46,8 @@
     <Compile Include="ImageButton\ImageButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ImageButton\ImageButton.Designer.cs">
-      <DependentUpon>ImageButton.cs</DependentUpon>
-    </Compile>
     <Compile Include="ImageCheckbox\ImageCheckbox.cs">
       <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ImageCheckbox\ImageCheckbox.Designer.cs">
-      <DependentUpon>ImageCheckbox.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
