--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -57,14 +57,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TestControl.Designer.cs">
-      <DependentUpon>TestControl.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
