--- a/WinFormControls.csproj
+++ b/WinFormControls.csproj
@@ -61,6 +61,13 @@
     <Compile Include="ImageCheckbox\ImageCheckbox.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="SimpleListBox\SimpleListBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SimpleListBox\SimpleListBox.Designer.cs">
+      <DependentUpon>SimpleListBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SimpleListBox\ISimpleListBoxItem.cs" />
     <Compile Include="TextBoxWithLabel\TextboxWithLabel.cs">
       <SubType>UserControl</SubType>
     </Compile>
