--- a/WinFormControls.csproj
+++ b/WinFormControls.csproj
@@ -1,93 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{55D03CE3-BE9A-45DB-AD7B-FBAF27484BF1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>WinFormControls</RootNamespace>
-    <AssemblyName>WinFormControls</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
+    <TargetFrameworks>netcoreapp3.1;net461</TargetFrameworks>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <Compile Remove="Test\**" />
+    <EmbeddedResource Remove="Test\**" />
+    <None Remove="Test\**" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <None Remove=".gitignore" />
+    <None Remove="README.md" />
+    <None Remove="_config.yml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AutoScrollTextBox\AutoScrollTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ImageButton\ImageButton.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ImageCheckbox\ImageCheckbox.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="SimpleListBox\SimpleListBox.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="SimpleListBox\SimpleListBox.Designer.cs">
-      <DependentUpon>SimpleListBox.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TextBoxWithLabel\TextboxWithLabel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TextBoxWithLabel\TextboxWithLabel.Designer.cs">
-      <DependentUpon>TextboxWithLabel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TreeView\TreeNode.cs" />
-    <Compile Include="TreeView\TreeView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TreeView\TreeView.Designer.cs">
-      <DependentUpon>TreeView.cs</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SimpleListBox\SimpleListBox.resx">
-      <DependentUpon>SimpleListBox.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TextBoxWithLabel\TextboxWithLabel.resx">
-      <DependentUpon>TextboxWithLabel.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
